# jupycat

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
agents/: index.html
ai-agents/: index.html
contributing/: index.html
docs/: agents.md  ai-agents.md  contributing.md  index.md  usage.md
overrides/: main.html
search/: search_index.json
src/jupycat/: __init__.py  cli.py
stylesheets/: extra.css
tests/: test_cli.py
usage/: index.html
