[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jupycat"
version = "0.1.0"
description = "Read Jupyter notebook cells from the command line"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ebin Joseph"}]
keywords = ["jupyter", "notebook", "cli", "cat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/ebin7joseph/jupycat"
Documentation = "https://github.com/ebin7joseph/jupycat/tree/main/docs"

[project.scripts]
jupycat = "jupycat.cli:main"

[project.optional-dependencies]
dev = ["pytest", "mkdocs", "mkdocs-material"]

[tool.pytest.ini_options]
testpaths = ["tests"]
